--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<link rel="stylesheet" href="style.css" />
 	</head>
 	<body>
-		<div>Teachable Machine Image Model</div>
+		<div>인공지능 교육 테스트</div>
 		<button type="button" onclick="init()">Start</button>
 		<div id="webcam-container"></div>
 		<div id="label-container"></div>
